posiGen_FullsendBox/src/objects/LD_Lease__c.object
<CustomObject>
    <fields>
        <fullName>A_R_Outstanding__c</fullName>
        <description>All future rental payments not yet billed plus the current outstanding invoiced amount (does not include tax or EE).  Formula is Curr_FT_Rent_Rec + Nonbill_Ft_Rent</description>
        <inlineHelpText>All future rental payments not yet billed plus the current outstanding invoiced amount (does not include tax or EE).  Formula is Curr_FT_Rent_Rec + Nonbill_Ft_Rent</inlineHelpText>
        <label>A_R_Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account the record is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LD Leases</relationshipLabel>
        <relationshipName>LD_Leases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ach_Debit__c</fullName>
        <description>Whether customer is on ACH or not (True or False)</description>
        <inlineHelpText>Whether customer is on ACH or not (True or False)</inlineHelpText>
        <label>Ach_Debit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <description>Installation Address Line 1</description>
        <inlineHelpText>Installation Address Line 1</inlineHelpText>
        <label>Address1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>Installation Address Line 2</description>
        <inlineHelpText>Installation Address Line 2</inlineHelpText>
        <label>Address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Date__c</fullName>
        <description>&quot;As of&quot; date for data shown in the extract</description>
        <inlineHelpText>&quot;As of&quot; date for data shown in the extract</inlineHelpText>
        <label>Age_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alpha_Code__c</fullName>
        <description>First 5 Letters of Accountholder Last Name</description>
        <inlineHelpText>First 5 Letters of Accountholder Last Name</inlineHelpText>
        <label>Alpha Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Am_I_Collection__c</fullName>
        <formula>$User.FirstName =  Collection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_I_Concierge__c</fullName>
        <formula>Account__r.Owner.FullID__c   =  $User.FullID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Concierge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed_Not_Due__c</fullName>
        <description>Base Rental Amount Invoiced with a future payment date.</description>
        <inlineHelpText>Base Rental Amount Invoiced with a future payment date.</inlineHelpText>
        <label>Billed_Not_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Past_Due__c</fullName>
        <description>Base Rental Amount Invoiced with a prior payment date, not yet paid.</description>
        <inlineHelpText>Base Rental Amount Invoiced with a prior payment date, not yet paid.</inlineHelpText>
        <label>Billed_Past_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_1__c</fullName>
        <description>Invoicing Address Line 1</description>
        <inlineHelpText>Invoicing Address Line 1</inlineHelpText>
        <label>Billing_Address_1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2__c</fullName>
        <description>Invoicing Address Line 2</description>
        <inlineHelpText>Invoicing Address Line 2</inlineHelpText>
        <label>Billing_Address_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Invoicing City</description>
        <inlineHelpText>Invoicing City</inlineHelpText>
        <label>Billing_City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <description>Name on Invoice</description>
        <inlineHelpText>Name on Invoice</inlineHelpText>
        <label>Billing_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <description>Invoicing State</description>
        <inlineHelpText>Invoicing State</inlineHelpText>
        <label>Billing_State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <description>Invoicing Zip</description>
        <inlineHelpText>Invoicing Zip</inlineHelpText>
        <label>Billing_Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <description>Date the contract is booked in the system of record</description>
        <inlineHelpText>Date the contract is booked in the system of record</inlineHelpText>
        <label>Book_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Installation Address City</description>
        <inlineHelpText>Installation Address City</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <formula>if( Account__r.Owner.Alias  = &quot;kcock&quot;,&quot;James&quot;,
if( Account__r.Owner.Alias = &quot;sclaw&quot;,&quot;Kim&quot;,
if( Account__r.Owner.Alias = &quot;salle&quot;,&quot;Natosha&quot;,
if( Account__r.Owner.Alias = &quot;aglap&quot;,&quot;Dujuane&quot;,
if( Account__r.Owner.Alias = &quot;dhankton&quot;,&quot;Janisha&quot;,
if( Account__r.Owner.Alias = &quot;cwils&quot;,&quot;Shannon&quot;,
if( Account__r.Owner.Alias = &quot;jvolp&quot;,&quot;Honey&quot;,
if( Account__r.Owner.Alias = &quot;sdoug&quot;,&quot;Elizabeth&quot;,
	
&quot;xOther&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Date__c</fullName>
        <label>Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <description>Fund</description>
        <inlineHelpText>Fund</inlineHelpText>
        <label>Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge__c</fullName>
        <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
        <label>Concierge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact Name if different than Accountholder</description>
        <inlineHelpText>Contact Name if different than Accountholder</inlineHelpText>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_No__c</fullName>
        <description>Contract Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Contract Number</inlineHelpText>
        <label>Contract No</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Curr_Ft_Rent_Rec__c</fullName>
        <description>All outstanding invoiced rental payments (sales tax and EE not included)</description>
        <inlineHelpText>All outstanding invoiced rental payments (sales tax and EE not included)</inlineHelpText>
        <label>Curr_Ft_Rent_Rec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <description>Customer Number</description>
        <inlineHelpText>Customer Number</inlineHelpText>
        <label>Customer No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <description># of days the oldest past due invoice is delinquent</description>
        <inlineHelpText># of days the oldest past due invoice is delinquent</inlineHelpText>
        <label>Days_Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Reason__c</fullName>
        <label>Default Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Default – Agrees to Auto-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default - Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default – Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default - Involuntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default – Payment Plan (not Payment Restructuring)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Assumed Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Paid in Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – EE problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – Low Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – Property/Roof damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default - Foreclosure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deferred_Months__c</fullName>
        <label>Deferred_Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disconnect_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Disconnect_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disconnect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Customer_Numbers_Match__c</fullName>
        <formula>IF( Opportunity__r.LMS_Customer_Number__c  =  Customer_No__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Customer Numbers Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <description>Down Payment Amount (does not include tax)</description>
        <inlineHelpText>Down Payment Amount (does not include tax)</inlineHelpText>
        <label>Down_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <description>Day on which a payment is due each month.</description>
        <inlineHelpText>Day on which a payment is due each month.</inlineHelpText>
        <label>Due_Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>End of Lease Term</description>
        <inlineHelpText>End of Lease Term</inlineHelpText>
        <label>Expiration_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Month_Delinquent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or nor the first month of a lease is delinquent</description>
        <label>First Month Delinquent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Been_Boarded__c</fullName>
        <formula>IF( ISNULL( Name ) , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Been Boarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Serv_Date__c</fullName>
        <description>Contract start date</description>
        <inlineHelpText>Contract start date</inlineHelpText>
        <label>In_Serv_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <description>Market Type (Residential or Commercial)</description>
        <inlineHelpText>Market Type (Residential or Commercial)</inlineHelpText>
        <label>Industry_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Account_Activity_Date__c</fullName>
        <formula>Account__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Account Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call_Comment__c</fullName>
        <formula>Account__r.Last_Call_Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Call Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Type__c</fullName>
        <formula>Account__r.Last_Call_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Call Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Interaction_Date__c</fullName>
        <description>Pull the type of task for the associated account</description>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interaction__c</fullName>
        <label>Last Interaction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Category__c</fullName>
        <description>Used to create a sub category within Funds</description>
        <inlineHelpText>Used to create a sub category within Funds</inlineHelpText>
        <label>Lease Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Code__c</fullName>
        <label>Lease Code</label>
        <picklist>
            <picklistValues>
                <fullName>Bankrupcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>Operating, Usage, or PPA</description>
        <inlineHelpText>Operating, Usage, or PPA</inlineHelpText>
        <label>Lease Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lst_Pmt_Mde_Date__c</fullName>
        <description>Date of last payment</description>
        <inlineHelpText>Date of last payment</inlineHelpText>
        <label>Lst_Pmt_Mde_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Pay_Due_Dte__c</fullName>
        <description>Date of Next Payment due</description>
        <inlineHelpText>Date of Next Payment due</inlineHelpText>
        <label>Next_Pay_Due_Dte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The Opportunity this LD Lease is related to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>LD Leases</relationshipLabel>
        <relationshipName>LD_Leases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Orig_Equip_Cost__c</fullName>
        <description>Original Equipment Cost</description>
        <inlineHelpText>Original Equipment Cost</inlineHelpText>
        <label>Orig_Equip_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Pmts__c</fullName>
        <description>Original number of payments</description>
        <inlineHelpText>Original number of payments</inlineHelpText>
        <label>Original_Pmts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due121_150__c</fullName>
        <description>Dollar Amount past due 121-150 days (does not include sales tax, EE, or other charges)</description>
        <inlineHelpText>Dollar Amount past due 121-150 days (does not include sales tax, EE, or other charges)</inlineHelpText>
        <label>Past_Due121_150</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due151_180__c</fullName>
        <description>Dollar Amount past due 151-180 days (does not include sales tax, EE or other charges)</description>
        <inlineHelpText>Dollar Amount past due 151-180 days (does not include sales tax, EE or other charges)</inlineHelpText>
        <label>Past_Due151_180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due181_210__c</fullName>
        <label>Past_Due181_210</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Over180__c</fullName>
        <description>Dollar Amount past due 180+ days (does not include sales tax, EE, or other charges)</description>
        <inlineHelpText>Dollar Amount past due 180+ days (does not include sales tax, EE, or other charges)</inlineHelpText>
        <label>Past_Due_Over180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Over360__c</fullName>
        <label>Past_Due_Over360</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track payment that have been collected in the last 7 days. Field is updated when account task type = Paid or Partial Payment</description>
        <inlineHelpText>Payment collected in last 7 days</inlineHelpText>
        <label>Payment Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodic_Rent__c</fullName>
        <description>Base Rental Amount excluding Sales Tax and EE</description>
        <inlineHelpText>Base Rental Amount excluding Sales Tax and EE</inlineHelpText>
        <label>Periodic_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recurring_Chgs__c</fullName>
        <description>Monthly Fees (EE, Non-ACH, etc.)</description>
        <inlineHelpText>Monthly Fees (EE, Non-ACH, etc.)</inlineHelpText>
        <label>Recurring_Chgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_01__c</fullName>
        <description>Next 12 monthly rental payment amounts (does not include sales tax or EE)</description>
        <inlineHelpText>Next 12 monthly rental payment amounts (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts1_12_01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_02__c</fullName>
        <description>Next 12 monthly rental payment amounts (does not include sales tax or EE)</description>
        <inlineHelpText>Next 12 monthly rental payment amounts (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts1_12_02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_03__c</fullName>
        <description>Next 12 monthly rental payment amounts (does not include sales tax or EE)</description>
        <inlineHelpText>Next 12 monthly rental payment amounts (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts1_12_03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Over5__c</fullName>
        <description>All other remaining payments (does not include sales tax or EE)</description>
        <inlineHelpText>All other remaining payments (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts_Over5</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year2__c</fullName>
        <description>Subsequent 12 rental payments (does not include sales tax or EE)</description>
        <inlineHelpText>Subsequent 12 rental payments (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts_Year2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year3__c</fullName>
        <description>Subsequent 12 rental payments (does not include sales tax or EE)</description>
        <inlineHelpText>Subsequent 12 rental payments (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts_Year3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year4__c</fullName>
        <description>Subsequent 12 rental payments (does not include sales tax or EE)</description>
        <inlineHelpText>Subsequent 12 rental payments (does not include sales tax or EE)</inlineHelpText>
        <label>Rem_Pmts_Year4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Months__c</fullName>
        <description>Months remaining in contract term</description>
        <inlineHelpText>Months remaining in contract term</inlineHelpText>
        <label>Remaining_Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Pmts__c</fullName>
        <description>Remaining number of payments</description>
        <inlineHelpText>Remaining number of payments</inlineHelpText>
        <label>Remaining_Pmts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Installation Address State</description>
        <inlineHelpText>Installation Address State</inlineHelpText>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended_Date__c</fullName>
        <label>Suspended_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspense__c</fullName>
        <description>Money Received but not yet posted to any open invoices</description>
        <inlineHelpText>Money Received but not yet posted to any open invoices</inlineHelpText>
        <label>Suspense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Removed__c</fullName>
        <formula>NOT(ISBLANK(Opportunity__r.R_P_Removal_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_On_Rent__c</fullName>
        <description>Tax amount on Periodic Rent</description>
        <inlineHelpText>Tax amount on Periodic Rent</inlineHelpText>
        <label>Tax_On_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terminated_Date__c</fullName>
        <description>System Removal Date</description>
        <inlineHelpText>System Removal Date</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <description>F in this field respresents a contract that has fully been terminated</description>
        <inlineHelpText>F in this field respresents a contract that has fully been terminated</inlineHelpText>
        <label>Termination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Lr__c</fullName>
        <description>Total lease rental payments invoiced, LTD (does not include sales tax or EE)</description>
        <inlineHelpText>Total lease rental payments invoiced, LTD (does not include sales tax or EE)</inlineHelpText>
        <label>Total_Billed_Lr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Curr_Recv__c</fullName>
        <description>Total outstanding amount due (All amts due, tax and other charges included)</description>
        <inlineHelpText>Total outstanding amount due (All amts due, tax and other charges included)</inlineHelpText>
        <label>Total_Curr_Recv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Late_Fees__c</fullName>
        <description>Any Late Fees applied to the Contract (Does not include historical late fees assessed prior to conversion)</description>
        <inlineHelpText>Any Late Fees applied to the Contract (Does not include historical late fees assessed prior to conversion)</inlineHelpText>
        <label>Total_Late_Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Not_Due__c</fullName>
        <description>Payment Amount Invoiced with a future payment date. (Includes Base Rent, Fees, &amp; Taxes)</description>
        <inlineHelpText>Payment Amount Invoiced with a future payment date. (Includes Base Rent, Fees, &amp; Taxes)</inlineHelpText>
        <label>Total_Not_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Chgs__c</fullName>
        <description>Any EE charges or Misc. Invoices (Reflects Late Fees brought over during conversion)</description>
        <inlineHelpText>Any EE charges or Misc. Invoices (Reflects Late Fees brought over during conversion)</inlineHelpText>
        <label>Total_Other_Chgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Lr__c</fullName>
        <description>Total lease rental payments received, LTD (does not include sales tax or EE)</description>
        <inlineHelpText>Total lease rental payments received, LTD (does not include sales tax or EE)</inlineHelpText>
        <label>Total_Paid_Lr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Past_Due__c</fullName>
        <description>Payment Amount Invoiced with a prior payment date, not yet paid. (Includes Base Rent, Fees, &amp; Taxes)</description>
        <inlineHelpText>Payment Amount Invoiced with a prior payment date, not yet paid. (Includes Base Rent, Fees, &amp; Taxes)</inlineHelpText>
        <label>Total_Past_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche__c</fullName>
        <description>Used to create a sub category within Categories</description>
        <inlineHelpText>Used to create a sub category within Categories</inlineHelpText>
        <label>Tranche</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsuspended_Date__c</fullName>
        <label>Unsuspended_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Full_Payment__c</fullName>
        <label>1st_Full_Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Pmt_Date__c</fullName>
        <description>First payment due date</description>
        <inlineHelpText>First payment due date</inlineHelpText>
        <label>1st_Pmt_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Non_Zero_Pmt__c</fullName>
        <description>The amount of the second non-zero rental payment (does not include tax)</description>
        <inlineHelpText>The amount of the second non-zero rental payment (does not include tax)</inlineHelpText>
        <label>2nd_Non_Zero_Pmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Installation Zip</description>
        <inlineHelpText>Installation Zip</inlineHelpText>
        <label>Zip_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking_date_match__c</fullName>
        <formula>Book_Date__c  ==  Opportunity__r.Booking_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>booking date match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ping</label>
        <type>Checkbox</type>
    </fields>
    <label>LD Lease</label>
    <listViews>
        <fullName>Accounts_30_or_less</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Past_Due__c</columns>
        <columns>Days_Delinquent__c</columns>
        <columns>Last_Interaction__c</columns>
        <columns>Last_Interaction_Date__c</columns>
        <columns>Payment_Collected__c</columns>
        <columns>First_Month_Delinquent__c</columns>
        <columns>Lease_Code__c</columns>
        <columns>System_Removed__c</columns>
        <columns>Disconnect_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Delinquent__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </filters>
        <label>Accounts 30 or less</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Book_Date__c</columns>
        <columns>NAME</columns>
        <columns>Lease_Account_Name__c</columns>
        <columns>Billed_Past_Due__c</columns>
        <columns>Billed_Not_Due__c</columns>
        <columns>Lease_Code__c</columns>
        <columns>Days_Delinquent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>